# win-release-guard

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  deep-research-report.md  pyproject.toml
docs/: README.md  agent-chokepoints.md  anti-static-freshness.md  architecture-insight.md  dashboard-and-pages.md  handover-prompt19.md  handover-prompt20.md  handover-prompt21.md  live-panther-json-regression.md  maintainer-guide.md  panther-support.md  policy-signing.md  security-automation.md  source-learnings.md  source-modules.md  tagged-release-lane.md
tests/: test_agents_contract.py  test_branding_contract.py  test_cache.py  test_ci_workflow.py  test_cli.py  test_commit_message_hygiene.py  test_debug_panther_json_leaks.py  test_dependency_freshness.py  test_diagnostic_tail.py  test_edge_cases.py  test_evaluator.py  test_export_clean_archive.py  test_github_action_versions.py  test_github_wiki_sync.py  test_import_contract.py  test_json_hardening.py  test_live_fixture_german_25h2.py  test_live_panther_json_regression.py  test_live_verification_gate_docs.py  test_local_state.py  test_no_active_graph_auth_references.py  test_no_secret_material.py  test_output_encoding.py  test_pages_landing.py  test_policy_diagnostics.py  test_policy_generator.py  test_policy_source_cli.py  test_project_identity.py  test_publish_policy_workflow.py  test_pypi_publish_workflow.py  test_remote_policy.py  test_repository_automation.py  test_runtime_policy_sources.py  test_signing.py  test_signing_key_management.py  test_source_diagnostics_issue_metadata.py  test_source_diagnostics_issue_sync.py  test_source_failures.py  test_subprocess_window_hiding.py  test_temporary_artifacts.py  (+5 more)
tools/: check_commit_message.py  check_dependency_freshness.py  check_github_action_versions.py  (+10 more)
(+73 files in other folders)
