[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "win11_release_guard"
version = "0.3.3"
description = "Windows 11 broad-fleet release compliance guard."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
authors = [{ name = 'Mikail ("Avnsx") C.', email = "AvnDev@protonmail.com" }]
requires-python = ">=3.10"
dependencies = ["cryptography>=41"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Avnsx/win11_release_guard"
Repository = "https://github.com/Avnsx/win11_release_guard"
Documentation = "https://avnsx.github.io/win11_release_guard/wiki/"
Changelog = "https://github.com/Avnsx/win11_release_guard/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Avnsx/win11_release_guard/issues"
"Public Feed" = "https://avnsx.github.io/win11_release_guard/windows-release-policy.json"
"Pages Dashboard" = "https://avnsx.github.io/win11_release_guard/"

[project.optional-dependencies]
test = ["packaging>=24", "pytest>=8", "tomli>=2; python_version < '3.11'"]

[project.scripts]
win11_release_guard = "win11_release_guard.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["win11_release_guard*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
win11_release_guard = ["data/*.json", "data/*.sig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
